--- a/widget/html/followup/followupList.html
+++ b/widget/html/followup/followupList.html
@@ -5,10 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="maximum-scale=1.0,minimum-scale=1.0,user-scalable=0,width=device-width,initial-scale=1.0" />
     <title>随访记录</title>
-    <link rel="stylesheet" type="text/css" href="../css/history.css" />
-    <link rel="stylesheet" type="text/css" href="../css/button.css" />
-    <script type="text/javascript" src="../script/api.js"></script>
-    <script type="text/javascript" src="../script/util.js"></script>
+    <link rel="stylesheet" type="text/css" href="../../css/history.css" />
+    <link rel="stylesheet" type="text/css" href="../../css/button.css" />
+    <script type="text/javascript" src="../../script/api.js"></script>
+    <script type="text/javascript" src="../../script/constants.js"></script>
+    <script type="text/javascript" src="../../script/util.js"></script>
 </head>
 
 <body class="body-silver">
@@ -38,13 +39,24 @@ apiready = function() {
         api.closeWin();
     }
 
-    history_id = api.pageParam.history_id;
+    initLocalFollowUp();
+
+    var history = getStorage("history");
+    history_id = history.id;
 
     data = [{
         "title": "",
         "subTitle": "",
         "remark": ""
     }]
+
+    model = api.require('model');
+    query = api.require('query');
+    model.config({
+        appId: historyConstants.appId,
+        appKey: historyConstants.appKey,
+        host: historyConstants.host
+    });
 
     followupList = api.require('UIListView');
     followupList.open({
@@ -97,7 +109,7 @@ apiready = function() {
     }, function(ret, err) {
         index = ret.index;
         if (ret.eventType == "show") {
-            reloadList(data);
+            loadList();
         }
         // 点击列表事件
         if (ret.eventType == "clickContent") {
@@ -114,7 +126,7 @@ apiready = function() {
             followupList.getDataByIndex({
                 index: ret.index
             }, function(ret, err) {
-                modiFollowUp(index);
+                modiFollowUp(ret.data.follow_up_id);
             });
         }
 
@@ -124,8 +136,8 @@ apiready = function() {
                 followupList.getDataByIndex({
                     index: ret.index
                 }, function(ret, err) {
-                    deleteFollowUp(index);
-                    reloadList(data);
+                    deleteFollowUp(ret.data.follow_up_id);
+                    loadList();
                 });
             }
         }
@@ -165,14 +177,8 @@ apiready = function() {
     });
 }
 
-function reloadList(data) {
-    model = api.require('model');
-    query = api.require('query');
-    model.config({
-        appId: 'A6903478274381',
-        appKey: '460A4799-0424-A29B-6809-F06FDF1D888F',
-        host: 'https://d.apicloud.com'
-    });
+function loadList() {
+    showProgress("加载中...");
     query.createQuery(function(ret, err) {
         if (ret && ret.qid) {
             var queryId = ret.qid;
@@ -187,9 +193,10 @@ function reloadList(data) {
             });
             var json_objs = [];
             model.findAll({
-                class: "followUp",
+                class: historyConstants.followUpTable,
                 qid: queryId
             }, function(ret, err) {
+                hideProgress();
                 if (err) {
                     alert(JSON.stringify(err));
                 } else {
@@ -198,23 +205,22 @@ function reloadList(data) {
                         while (ret[idx] != undefined) {
                             var follow_up_item = {
                                 follow_up_id: ret[idx].id,
-                                title: ret[idx].date,
+                                title: ret[idx].createdAt.substring(0, 10),
                                 subTitle: "",
                                 remark: ""
                             };
                             json_objs.push(follow_up_item);
                             idx = idx + 1;
                         }
-                        reloadData(json_objs);
+                        loadData(json_objs);
                     }
                 }
-                api.hideProgress();
             });
         }
     });
 }
 
-function reloadData(data) {
+function loadData(data) {
     followupList.reloadData({
         "data": data
     }, function(ret, err) {
@@ -227,6 +233,7 @@ function reloadData(data) {
 }
 
 function viewFollowUp(follow_up_id) {
+    initLocalFollowUp();
     api.openWin({
         name: "followup",
         url: './viewFollowUp.html',
@@ -235,11 +242,16 @@ function viewFollowUp(follow_up_id) {
         },
         vScrollBarEnabled: false,
         reload: true,
-        bounces: false
+        bounces: false,
+        animation: {
+            type: "movein",
+            duration: 0
+        }
     });
 }
 
 function newFollowUp() {
+    initLocalFollowUp();
     api.openWin({
         name: "followup",
         url: './followup.html',
@@ -248,11 +260,16 @@ function newFollowUp() {
         },
         vScrollBarEnabled: false,
         reload: true,
-        bounces: false
+        bounces: false,
+        animation: {
+            type: "movein",
+            duration: 0
+        }
     });
 }
 
-function modiFollowUp(index) {
+function modiFollowUp(follow_up_id) {
+    initLocalFollowUp();
     api.openWin({
         name: "followup",
         url: './followup.html',
@@ -261,41 +278,28 @@ function modiFollowUp(index) {
         },
         vScrollBarEnabled: false,
         reload: true,
-        bounces: false
+        bounces: false,
+        animation: {
+            type: "movein",
+            duration: 0
+        }
     });
 }
 
-function deleteFollowUp(index) {
-    follow_up.splice(index, 1);
-    data = [];
-    var idx = 0;
-    while (follow_up[idx] != undefined) {
-        follow_up_item = {
-            "title": follow_up[idx].follow_up_info,
-            "subTitle": follow_up[idx].follow_up_date
-        }
-        data.push(follow_up_item);
-        idx = idx + 1;
-    }
-    model = api.require('model');
-    model.config({
-        appId: 'A6903478274381',
-        appKey: '460A4799-0424-A29B-6809-F06FDF1D888F',
-        host: 'https://d.apicloud.com'
-    });
-    model.updateById({
-        class: 'caseHistory',
-        id: history_id,
-        value: {
-            follow_up: follow_up
-        }
+function deleteFollowUp(follow_up_id) {
+    showProgress();
+    model.deleteById({
+        class: historyConstants.followUpTable,
+        id: follow_up_id,
     }, function(ret, err) {
+        hideProgress();
         if (ret) {
-            followupAddOrModiEvent(follow_up);
-            hideProgress();
+            api.toast({
+                msg: "删除随访记录成功"
+            })
+            loadList();
         } else {
-            alert("保存随访信息失败！" + JSON.stringify(err));
-            hideProgress();
+            alert("删除随访记录失败" + JSON.stringify(err));
         }
     });
 }
