--- a/widget/html/followup/viewFollowUpFrame.html
+++ b/widget/html/followup/viewFollowUpFrame.html
@@ -5,10 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="maximum-scale=1.0,minimum-scale=1.0,user-scalable=0,width=device-width,initial-scale=1.0" />
     <title>随访信息</title>
-    <link rel="stylesheet" type="text/css" href="../css/history.css" />
-    <link rel="stylesheet" type="text/css" href="../css/button.css" />
-    <script type="text/javascript" src="../script/api.js"></script>
-    <script type="text/javascript" src="../script/util.js"></script>
+    <link rel="stylesheet" type="text/css" href="../../css/history.css" />
+    <link rel="stylesheet" type="text/css" href="../../css/button.css" />
+    <script type="text/javascript" src="../../script/api.js"></script>
+    <script type="text/javascript" src="../../script/constants.js"></script>
+    <script type="text/javascript" src="../../script/util.js"></script>
 </head>
 
 <body class="body-silver">
@@ -25,109 +26,33 @@
                 </a>
         </header>
         <div id="main" class="flex-con">
-            <div class="groupName">病情</div>
+            <div class="groupName">随访</div>
             <div class="group">
-                <div class="field textarea_field bottom">
+                <div class="field textarea_field">
                     <div class="textarea_key">病情</div>
                     <div class="textarea_value">
                         <textarea id="condition"></textarea>
                     </div>
                 </div>
-            </div>
-            <div class="groupName">裸眼视力</div>
-            <div class="group">
-                <div class="field">
-                    <div class="key">Vod</div>
-                    <div class="value">
-                        <input type="text" id="vod" />
-                    </div>
-                </div>
-                <div class="field bottom">
-                    <div class="key">Vos</div>
-                    <div class="value">
-                        <input type="text" id="vos" />
+                <div class="field textarea_field bottom">
+                    <div class="textarea_key">治疗</div>
+                    <div class="textarea_value">
+                        <textarea id="treatment"></textarea>
                     </div>
                 </div>
             </div>
-            <div class="groupName">矫正视力</div>
+            <div class="groupName">检查</div>
             <div class="group">
-                <div class="field">
-                    <div class="key">Vod</div>
-                    <div class="value">
-                        <input type="text" id="corrected_vod" />
-                    </div>
+                <div class="field" tapmode="onFieldClick" onclick="openWin('physical');">
+                    <div class="key">体检信息</div>
+                    <div class="value more"><span>&gt;</span></div>
                 </div>
-                <div class="field bottom">
-                    <div class="key">Vos</div>
-                    <div class="value">
-                        <input type="text" id="corrected_vos" />
-                    </div>
-                </div>
-            </div>
-            <div class="groupName">眼压</div>
-            <div class="group">
-                <div class="field">
-                    <div class="key">Tod</div>
-                    <div class="value_with_unit">
-                        <input type="text" id="tod" />
-                    </div>
-                    <div class="unit">mmHg</div>
-                </div>
-                <div class="field bottom">
-                    <div class="key">Tos</div>
-                    <div class="value_with_unit">
-                        <input type="text" id="tos" />
-                    </div>
-                    <div class="unit">mmHg</div>
-                </div>
-            </div>
-            <div class="groupName">其他</div>
-            <div class="group">
-                <div class="field">
-                    <div class="key">外眼</div>
-                    <div class="value">
-                        <input type="text" id="outer_eye" />
-                    </div>
-                </div>
-                <div class="field">
-                    <div class="key">结膜</div>
-                    <div class="value">
-                        <input type="text" id="conjunctiva" />
-                    </div>
-                </div>
-                <div class="field">
-                    <div class="key">角膜</div>
-                    <div class="value">
-                        <input type="text" id="cornea" />
-                    </div>
-                </div>
-                <div class="field">
-                    <div class="key">前房</div>
-                    <div class="value">
-                        <input type="text" id="anterior_chamber" />
-                    </div>
-                </div>
-                <div class="field">
-                    <div class="key">晶体</div>
-                    <div class="value">
-                        <input type="text" id="lens" />
-                    </div>
-                </div>
-                <div class="field">
-                    <div class="key">玻璃体</div>
-                    <div class="value">
-                        <input type="text" id="vitreous" />
-                    </div>
-                </div>
-                <div class="field bottom">
-                    <div class="key">眼底</div>
-                    <div class="value">
-                        <input type="text" id="eyeground" />
-                    </div>
+                <div class="field bottom" tapmode="onFieldClick">
+                    <div class="key">辅助检查</div>
+                    <div class="value more"><span>&gt;</span></div>
                 </div>
             </div>
         </div>
-    </div>
     </div>
 </body>
 <script type="text/javascript">
@@ -140,76 +65,95 @@ apiready = function() {
         api.closeWin();
     }
 
-    history_id = api.pageParam.history_id;
-    follow_up = api.pageParam.follow_up;
-    index = api.pageParam.index;
-    size = api.pageParam.size;
-    type = "";
-    if (index != undefined && index != null) {
-        type = "modi";
-        $api.byId('follow_up_date').value = follow_up[index].follow_up_date;
-        $api.byId('follow_up_info').value = follow_up[index].follow_up_info;
-    }
+    follow_up_id = api.pageParam.follow_up_id;
 
-    $api.attr($api.byId('follow_up_date'), 'readonly', 'true');
-    if (type != "modi") {
-        $api.byId('follow_up_date').value = getDate();
-    }
+    getFullFollowUp(follow_up_id);
 
-    api.addEventListener({
-        name: 'returnBirthday'
-    }, function(ret, err) {
-        if (ret) {
-            $api.byId('follow_up_date').value = ret.value.birthday;
-        }
-    });
+    // api.addEventListener({
+    //     name: 'returnBirthday'
+    // }, function(ret, err) {
+    //     if (ret) {
+    //         $api.byId('follow_up_date').value = ret.value.birthday;
+    //     }
+    // });
 }
 
-function saveFollowUp() {
-    if ($api.byId('follow_up_info').value == "") {
-        alert("请输入随访内容");
-        return;
-    }
-    showProgress();
-    follow_up_item = {
-        "follow_up_date": $api.byId('follow_up_date').value,
-        "follow_up_info": $api.byId('follow_up_info').value
-    }
-
-    if (type == "modi") {
-        follow_up[index] = follow_up_item;
-    } else {
-        if (follow_up != undefined) {
-            follow_up.push(follow_up_item);
-        } else {
-            follow_up = [];
-            follow_up[0] = follow_up_item;
-        }
-    }
-
-    model = api.require('model');
+function getFullFollowUp(follow_up_id) {
+    showProgress("加载中...");
+    var model = api.require('model');
+    var query = api.require('query');
     model.config({
-        appId: 'A6903478274381',
-        appKey: '460A4799-0424-A29B-6809-F06FDF1D888F',
-        host: 'https://d.apicloud.com'
+        appId: historyConstants.appId,
+        appKey: historyConstants.appKey,
+        host: historyConstants.host
     });
-    model.updateById({
-        class: 'caseHistory',
-        id: history_id,
-        value: {
-            follow_up: follow_up
-        }
-    }, function(ret, err) {
-        if (ret) {
-            followupAddOrModiEvent(follow_up);
-            hideProgress();
-            api.closeWin();
-        } else {
-            alert("保存随访信息失败！" + JSON.stringify(err));
-            hideProgress();
+    query.createQuery(function(ret, err) {
+        if (ret && ret.qid) {
+            var queryId = ret.qid;
+            query.include({
+                qid: queryId,
+                column: 'physical_pointer'
+            });
+            model.findAll({
+                class: historyConstants.followUpTable,
+                qid: queryId
+            }, function(ret, err) {
+                hideProgress();
+                if (err) {
+                    alert(JSON.stringify(err));
+                } else {
+                    if (ret[0]) {
+                        var followup = ret[0];
+                        setStorage("followup", followup);
+                        $api.byId("condition").value = followup.condition;
+                        $api.byId("treatment").value = followup.treatment;
+                    }
+                }
+            });
         }
     });
 }
+
+function modiFollowUp() {
+    api.openWin({
+        name: api.winName + "_modi_followup",
+        url: '../followup.html',
+        pageParam: {},
+        reload: true,
+        bounces: false,
+        vScrollBarEnabled: false,
+        animation: {
+            type: "movein",
+            duration: 0
+        }
+    });
+}
+
+function openWin(type) {
+    var pageParam = {};
+    var name = "";
+    switch (type) {
+        case 'physical':
+            name = api.winName + "_view_physical";
+            page = "physical/viewPhysical";
+            break;
+        default:
+            break;
+    }
+    api.openWin({
+        name: name,
+        url: '../' + page + '.html',
+        pageParam: pageParam,
+        reload: true,
+        bounces: false,
+        vScrollBarEnabled: false,
+        animation: {
+            type: "movein",
+            duration: 0
+        }
+    });
+}
+
 </script>
 
 </html>
