--- a/widget/html/physical/viewPhysical.html
+++ b/widget/html/physical/viewPhysical.html
@@ -5,58 +5,59 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="maximum-scale=1.0,minimum-scale=1.0,user-scalable=0,width=device-width,initial-scale=1.0" />
     <title>体检信息</title>
-    <link rel="stylesheet" type="text/css" href="../css/history.css" />
-    <link rel="stylesheet" type="text/css" href="../css/button.css" />
-    <script type="text/javascript" src="../script/api.js"></script>
-    <script type="text/javascript" src="../script/util.js"></script>
+    <link rel="stylesheet" type="text/css" href="../../css/history.css" />
+    <link rel="stylesheet" type="text/css" href="../../css/button.css" />
+    <script type="text/javascript" src="../../script/api.js"></script>
+    <script type="text/javascript" src="../../script/constants.js"></script>
+    <script type="text/javascript" src="../../script/util.js"></script>
 </head>
 
 <body>
     <div class="flex-wrap flex-vertical">
         <header>
-                <a id="left" tapmode="" onclick="window.closeWin();" class="button button-raised button-royal">
+            <a id="left" tapmode="" onclick="window.closeWin();" class="button button-raised button-royal">
                     &lt; 返回
                 </a>
-                <div id="middle">
-                    <span id="title">体检信息</span>
-                </div>
-                <a id="right" tapmode="" onclick="modiPhysical();" class="button button-raised button-royal">
-                    修改
+            <div id="middle">
+                <span id="title">体检信息</span>
+            </div>
+            <a id="right" tapmode="" class="button button-raised button-royal">
+                    
                 </a>
         </header>
         <div id="main" class="flex-con">
             <div class="groupName">裸眼视力</div>
-            <div class="group">
+            <div class="group group-edit">
                 <div class="field">
                     <div class="key">Vod</div>
                     <div class="value">
-                        <input type="text" id="vod" />
+                        <input type="text" id="vod" onclick="openPicker('vod')" />
                     </div>
                 </div>
                 <div class="field bottom">
                     <div class="key">Vos</div>
                     <div class="value">
-                        <input type="text" id="vos" />
+                        <input type="text" id="vos" onclick="openPicker('vos')" />
                     </div>
                 </div>
             </div>
             <div class="groupName">矫正视力</div>
-            <div class="group">
+            <div class="group group-edit">
                 <div class="field">
                     <div class="key">Vod</div>
                     <div class="value">
-                        <input type="text" id="corrected_vod" />
+                        <input type="text" id="corrected_vod" onclick="openPicker('corrected_vod')" />
                     </div>
                 </div>
                 <div class="field bottom">
                     <div class="key">Vos</div>
                     <div class="value">
-                        <input type="text" id="corrected_vos" />
+                        <input type="text" id="corrected_vos" onclick="openPicker('corrected_vos')" />
                     </div>
                 </div>
             </div>
             <div class="groupName">眼压</div>
-            <div class="group">
+            <div class="group group-edit">
                 <div class="field">
                     <div class="key">Tod</div>
                     <div class="value_with_unit">
@@ -73,7 +74,7 @@
                 </div>
             </div>
             <div class="groupName">其他</div>
-            <div class="group">
+            <div class="group group-edit">
                 <div class="field">
                     <div class="key">外眼</div>
                     <div class="value">
@@ -126,6 +127,8 @@
  * @return {[type]} [description]
  */
 apiready = function() {
+    var followup = getStorage("followup");
+
     $api.attr($api.byId('vod'), 'readonly', 'true');
     $api.attr($api.byId('vos'), 'readonly', 'true');
     $api.attr($api.byId('corrected_vod'), 'readonly', 'true');
@@ -140,19 +143,8 @@ apiready = function() {
     $api.attr($api.byId('vitreous'), 'readonly', 'true');
     $api.attr($api.byId('eyeground'), 'readonly', 'true');
 
-    model = api.require('model');
-    query = api.require('query');
-    model.config({
-        appId: 'A6903478274381',
-        appKey: '460A4799-0424-A29B-6809-F06FDF1D888F',
-        host: 'https://d.apicloud.com'
-    });
-
-    history_id = api.pageParam.data.history_id;
-    physical_id = api.pageParam.data.id;
-
-    if (physical_id != undefined && physical_id != null && physical_id != "") {
-        getPhysical();
+    if (followup.physical != undefined) {
+        setPhysical(followup.physical);
     }
 
     window.closeWin = function(winName) {
@@ -160,75 +152,34 @@ apiready = function() {
     }
 
     // 如果physical修改或者新增，则需刷新本页面
-    api.addEventListener({
-        name: 'physicalModiEvent'
-    }, function(ret, err) {
-        if (ret) {
-            physical_id = ret.value.physical_id;
-            getPhysical();
-        }
-    });
-    api.addEventListener({
-        name: 'physicalAddEvent'
-    }, function(ret, err) {
-        if (ret) {
-            physical_id = ret.value.physical_id;
-            getPhysical();
-        }
-    });
-
-}
-
-/**
- * [getPhysical description]
- * @return {[type]} [description]
- */
-function getPhysical() {
-    showProgress();
-    query.createQuery(function(ret, err) {
-        if (ret && ret.qid) {
-            model.findById({
-                class: "physical",
-                id: physical_id
-            }, function(ret, err) {
-                if (err) {
-                    alert(JSON.stringify(err));
-                } else {
-                    if (ret) {
-                        setPhysical(ret);
-                    }
-                }
-                hideProgress();
-            });
-        }
-    });
+    // api.addEventListener({
+    //     name: 'physicalSaveEvent'
+    // }, function(ret, err) {
+    //     if (ret) {
+    //         var followup = getStorage("followup");
+    //         setPhysical(followup.physical);
+    //     }
+    // });
 }
 
 /**
  * [modiPhysical description]
  * @return {[type]} [description]
  */
-function modiPhysical() {
-    api.openWin({
-        name: 'physical',
-        url: './physical.html',
-        pageParam: {
-            data: {
-                id: physical_id,
-                history_id: history_id
-            }
-        },
-        animation: {
-            type: "movein",
-            duration: 300
-        },
-        vScrollBarEnabled: false,
-        reload: true,
-        bounces: false
-    });
-
-}
-
+// function modiPhysical() {
+//     api.openWin({
+//         name: api.winName + "modi_physical",
+//         url: './physical.html',
+//         pageParam: {},
+//         vScrollBarEnabled: false,
+//         reload: true,
+//         bounces: false,
+//         animation: {
+//             type: "movein",
+//             duration: 0
+//         },
+//     });
+// }
 </script>
 
 </html>
